--- a/style.css
+++ b/style.css
@@ -103,3 +103,12 @@ button {
     color: #333;
     font-weight: bold;
 }
+#camera video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#camera canvas.drawingBuffer {
+    display: none; /* Esconde as linhas de debug do Quagga */
+}
